# Old-Well-Labs

./: Makefile  README.md  compose.yaml
backend/: .env  Dockerfile  app.db  pyproject.toml
backend/app/: __init__.py  extensions.py
backend/app/api/: __init__.py
backend/app/company/: __init__.py  routes.py  service.py
backend/app/models/: stock.py
backend/app/schemas/: stock.py
backend/app/stock/: __init__.py  routes.py  service.py
backend/data/: stock-data.csv
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useCompanies.ts  useCompanyStocks.ts
frontend/src/layout/: Layout.tsx
frontend/src/pages/company/: CompanyPage.tsx
frontend/src/pages/company/breadcrumbs/: BreadCrumb.tsx
frontend/src/pages/company/calculator/: CumulativeCalculator.tsx
frontend/src/pages/company/charts/: TimeSeries.tsx
frontend/src/pages/home/: HomePage.tsx
frontend/src/pages/home/card/: CompanyCard.tsx
frontend/src/services/: api.ts  axios-config.ts  company-service.ts  stock-service.ts
frontend/src/types/: index.ts
